# railway-playground

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go  rustfmt.toml
.zed/: debug.json
app/: .prettierrc.json  Dockerfile  package.json  svelte.config.js  vite.config.ts
app/src/routes/: +layout.svelte
client/: .dockerignore  .prettierrc.json  Dockerfile  local.Dockerfile  package.json
client/src/: app.css
client/src/routes/: +layout.server.ts  +page.svelte
docker/: client.Dockerfile  docker-compose.yml  server.Dockerfile
docker/setup/: air.toml  seed.sql
internal/handler/: auth.go  handler.go  handler_test.go  index.go  util.go
internal/middleware/: auth.go
internal/store/: auth.go  store.go  user.go
internal/util/: util.go
src/: handler.rs  main.rs
src/handler/: auth.rs  mod.rs
test/: assert.go  handler_test.go
