[package]
name = "railway-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 3
strip = true
lto = true
