[package]
name = "railway-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
axum-test = "18.2.1"

[profile.release]
opt-level = 3
strip = true
lto = true
